welcome.lessons.welcome.bat.bool2.TeaParty.scala.error
teaParty:-6: error: Missing closing brace `}' assumed here
try {
^teaParty:1: error: expected class or object definition
def teaParty(tea:Int, candy:Int): Int = {
^